changed my-pet.html to index.html and created new dir contacts.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,3 +16,13 @@ h1 {
     font-size: 20px;
     line-height: 30px;
   }
+  body {
+    background-color: blanchedalmond;
+  }
+  img {
+    height: 300px;
+    width: 32%;
+    background-color: black;
+    border-style: groove;
+
+  }
